# pydantic-enhanced-serializer

./: CHANGES.rst  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yaml
docs/: expansions.md  general_usage.md  integrations.md
pydantic_enhanced_serializer/: __init__.py  fieldsets.py  models.py  path_put.py  render.py  schema.py
pydantic_enhanced_serializer/integrations/: django_ninja.py  fastapi.py  flask.py
pydantic_sparsefields/: fieldsets.py  models.py  path_put.py  render.py  schema.py
pydantic_sparsefields/integrations/: flask.py
scripts/: build.sh  format.sh  install_for_dev.sh  lint.sh  test.sh
tests/: test_expansions.py  test_fields.py  test_schema.py  test_schema_model_has_fieldsets_defined.py  utils.py
tests/integrations/: test_fastapi.py  test_flask.py
