[metadata]
name = pydantic-sparsefields
version = 0.1.0
description = Pydantic extension that allows user selection of object fields or expanded inline when serializing models
author = Adam Sussman
author_email = adam.sussman@gmail.com
url = https://github.com/adamsussman/pydantic-sparsefields
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: FastAPI
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

python_requires = >= 3.8

[options]
packages = pydantic_sparsefields, pydantic_sparsefields.integrations
install_requires =
    pydantic >= 1.8

[options.extras_require]
test =
    asgiref
    aiodataloader @ git+https://git@github.com/syrusakbary/aiodataloader.git@0345c66f2f15a724a5e241ca73b8823d2ddd0625
    fastapi
    flask
    pytest
    pytest-cov
    requests >=2.24.0,<3.0.0
dev =
    mypy
    black
    isort
    flake8
    flake8-bugbear
    flake8-debugger
    ipdb

[options.package_data]
pydantic_sparsefields = py.typed


[tool:pytest]
addopts = --cov=pydantic_sparsefields --no-cov-on-fail -s

[coverage:report]
fail_under: 85
show_missing: True
omit: */__init__.py

[tool:isort]
profile = black
multi_line_output = 3
include_trailing_comma = True

[flake8]
max-line-length = 100
per-file-ignores =
    pydantic_sparsefields/__init__.py:F401
